...
                .padding(MaterialTheme.spacing.spaceMedium)
                .padding(end = MaterialTheme.spacing.spaceMedium)
                .onFocusChanged { focusState ->
                    onFocusChanged(focusState)
                }
                .semantics {
                    contentDescription = "SearchTextField"
                }
        )
        if (shouldShowHint) {
            Text(
                text = hint,
                style = MaterialTheme.typography.body1,
...
